--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@ button:hover {
 
 
 
- .container {
+ /* .container {
       padding: 20px;
-    }
+    } */
 
     .cleaning-services {
       margin-bottom: 50px;
