--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@ button:hover {
         <img src="assets/img/service/banner2.png" alt="Slide 1">
       </div>
       <div class="slide">
-        <img src="assets/img/service/banner1.jpeg" alt="Slide 2">
+        <img src="assets/img/service/DEEP CLEAN.png" alt="Slide 2">
       </div>
     
 
