--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,34 @@ button:hover {
     font-size: 16px;
   }
 }
+/* arrow mobile view */
+.arrow {
+  display: none; /* Hidden by default */
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  border-radius: 50%;
+  padding: 6px 10px;
+  cursor: pointer;
+  z-index: 10;
+}
 
+.arrow-left {
+  left: 10px;
+}
+
+.arrow-right {
+  right: 10px;
+}
+
+@media (max-width: 768px) {
+  .arrow {
+    display: block;
+  }
+}
 
 
    </style>
@@ -1272,6 +1299,10 @@ button:hover {
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                             </li>
+                            <li>
+                              <a href="https://instagram.com/yourprofile" target="_blank">
+                                <i class="fab fa-instagram"></i></a>
+                                </li>
                             <li>
                                 <a href="#">
                                     <i class="fab fa-twitter"></i>
@@ -1340,7 +1371,7 @@ button:hover {
                                     </div>
                                     <div class="info">
                                         <p>Have any Questions?</p>
-                                        <h5><a href="tel:+91 9902556089">+91 9902556089</a></h5>
+                                        <h5><a href="tel:+91812303800">+918123038008</a></h5>
                                     </div>
                                 </div>
                             </li>
@@ -1409,21 +1440,21 @@ button:hover {
       <div class="discount" style="margin-right: -30;">Up to 50% off</div>
     </div>
 
-    <div class="scroll-wrapperr">
-      <!-- <div class="arrow arrow-left" onclick="scrollSlider('slider1', -1)">&#8592;</div>
-      <div class="arrow arrow-right" onclick="scrollSlider('slider1', 1)">&#8594;</div> -->
+    <div class="scroll-wrapperr" id="slider-cleaning">
+      <div class="arrow arrow-left" onclick="scrollSlider('slider1', -1)">&#8592;</div>
+      <div class="arrow arrow-right" onclick="scrollSlider('slider1', 1)">&#8594;</div>
 
       <div class="scroll-container" id="slider1">
         <div class="card" onclick="openModal('Bathroom Cleaning')">
-          <img src="assets/img/gallery/Cleaning1.jpg" alt="1">
+          <img src="assets/img/gallery/cleaning service 1.jpg" alt="1">
           <p class="card-text">Bathroom Cleaning</p>
         </div>
         <div class="card" onclick="openModal('Sofa Cleaning')">
-          <img src="assets/img/gallery/Artboard 2.jpg" alt="2">
+          <img src="assets/img/gallery/cleaning service 2.jpg" alt="2">
           <p class="card-text">Sofa Cleaning</p>
         </div>
         <div class="card" onclick="openModal('Kitchen Cleaning')">
-          <img src="assets/img/gallery/Artboard 3.jpg" alt="3">
+          <img src="assets/img/gallery/c" alt="3">
           <p class="card-text">Kitchen Cleaning</p>
         </div>
         <div class="card" onclick="openModal('Vacant Home Deep Cleaning')">
@@ -1478,9 +1509,9 @@ button:hover {
       <div class="discount" style="margin-right: -30;">100 % In House Staff</div>
     </div>
 
-    <div class="scroll-wrapperr">
-      <!-- <div class="arrow arrow-left" onclick="scrollSlider('slider1', -1)">&#8592;</div>
-      <div class="arrow arrow-right" onclick="scrollSlider('slider1', 1)">&#8594;</div> -->
+    <div class="scroll-wrapperr" id="slider-painting">
+      <div class="arrow arrow-left" onclick="scrollSlider('slider1', -1)">&#8592;</div>
+      <div class="arrow arrow-right" onclick="scrollSlider('slider1', 1)">&#8594;</div>
 
       <div class="scroll-container" id="slider1">
         <div class="card"  onclick="openModal('Rental Painting')">
@@ -1525,15 +1556,17 @@ button:hover {
     </div>
     
   </div>
+  <!-- arrow function in mobile view -->
+   
   <div class="cleaning-services">
     <div class="cleaning-title">
       <h2>Pest Control</h2>
       <div class="discount" style="margin-right: -30;">Licensed Company</div>
     </div>
 
-    <div class="scroll-wrapperr">
-      <!-- <div class="arrow arrow-left" onclick="scrollSlider('slider1', -1)">&#8592;</div>
-      <div class="arrow arrow-right" onclick="scrollSlider('slider1', 1)">&#8594;</div> -->
+    <div class="scroll-wrapperr" id="slider-pest">
+      <div class="arrow arrow-left" onclick="scrollSlider('slider1', -1)">&#8592;</div>
+      <div class="arrow arrow-right" onclick="scrollSlider('slider1', 1)">&#8594;</div>
 
       <div class="scroll-container" id="slider1">
         <div class="card"  onclick="openModal('Cockroach Control')">
@@ -2147,7 +2180,7 @@ Services</div>
 
 <!-- Social Media Icons -->
 <div class="social-icons">
-  <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://www.facebook.com/profile.php?id=61576070910313" target="_blank"><i class="fab fa-facebook-f"></i></a>
   <a href="https://twitter.com/yourprofile" target="_blank"><i class="fab fa-twitter"></i></a>
   <a href="https://instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
   <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -2206,7 +2239,7 @@ Services</div>
                                         </div>
                                         <div class="content">
                                             <strong>Phone:</strong>
-                                            <a href="tel: +919902556089">+919902556089</a>
+                                            <a href="tel: +919902556089">+918123038008</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -2339,6 +2372,11 @@ Services</div>
     }
   }
   // whatsapp
+function scrollSlider(id, direction) {
+  const container = document.getElementById(id);
+  const scrollAmount = 200 * direction;
+  container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+}
 
 
 
